add reset password

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# supabase config
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# google auth
 GOOGLE_AUTH_CLIENT_SECRET=
 GOOGLE_AUTH_CLIENT_ID=
+
+# email sending
+GOOGLE_APP_PASSWORD =
+RESEND_API_KEY=
