--- a/package.json
+++ b/package.json
@@ -10,33 +10,41 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
+        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-popover": "^1.1.4",
+        "@radix-ui/react-scroll-area": "^1.2.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "1.0.0",
         "lucide-react": "^0.473.0",
         "next": "15.1.5",
         "nextjs-toploader": "^3.7.15",
+        "nodemailer": "^6.9.16",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "react-phone-number-input": "^3.4.11",
+        "react-virtuoso": "^4.12.3",
         "sonner": "^1.7.2",
         "zod": "^3.24.1"
     },
     "devDependencies": {
-        "supabase": "^2.6.8",
-        "tailwind-merge": "^2.6.0",
-        "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5",
+        "@eslint/eslintrc": "^3",
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
         "eslint": "^9",
         "eslint-config-next": "15.1.5",
-        "@eslint/eslintrc": "^3"
+        "postcss": "^8",
+        "supabase": "^2.6.8",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss": "^3.4.1",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "^5"
     },
     "prettier": {
         "trailingComma": "es5",
