--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-popover": "^1.1.4",
         "@radix-ui/react-scroll-area": "^1.2.2",
         "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.7",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
         "class-variance-authority": "^0.7.1",
