--- a/package.json
+++ b/package.json
@@ -10,30 +10,39 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.4",
         "@radix-ui/react-popover": "^1.1.4",
+        "@radix-ui/react-progress": "^1.1.1",
         "@radix-ui/react-scroll-area": "^1.2.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
+        "@tanstack/react-query": "^5.64.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
-        "lucide-react": "^0.473.0",
+        "jotai": "^2.11.1",
+        "lucide-react": "^0.474.0",
+        "motion": "^12.0.5",
         "next": "15.1.5",
         "nextjs-toploader": "^3.7.15",
         "nodemailer": "^6.9.16",
         "react": "^19.0.0",
+        "react-confetti": "^6.2.2",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
+        "recharts": "^2.15.0",
         "sonner": "^1.7.2",
         "zod": "^3.24.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@tanstack/eslint-plugin-query": "^5.64.2",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
