--- a/package.json
+++ b/package.json
@@ -42,13 +42,17 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@snaplet/copycat": "^6.0.0",
+        "@snaplet/seed": "0.98.0",
         "@tanstack/eslint-plugin-query": "^5.64.2",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.17",
+        "@types/pg": "^8.11.11",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.1.5",
+        "pg": "^8.13.1",
         "postcss": "^8",
         "supabase": "^2.6.8",
         "tailwind-merge": "^2.6.0",
