--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.0.0",
         "@tanstack/eslint-plugin-query": "^5.64.2",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.17",
@@ -53,7 +54,7 @@
         "postcss": "^8",
         "supabase": "^2.6.8",
         "tailwind-merge": "^2.6.0",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5"
     },
