--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react": "^19.0.0",
         "react-confetti": "^6.2.2",
         "react-dom": "^19.0.0",
+        "react-dropzone": "^14.3.5",
         "react-hook-form": "^7.54.2",
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
