--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # google auth
 GOOGLE_AUTH_CLIENT_SECRET=
 GOOGLE_AUTH_CLIENT_ID=
+
+# Storage
+S3_ENDPOINT=
+S3_REGION=
+S3_ACCESS_ID=
+S3_ACCESS_KEY=
+S3_PUBLIC_FILE_URL_PREFIX=
