--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.741.0",
+        "@aws-sdk/s3-request-presigner": "^3.741.0",
         "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
@@ -21,6 +23,7 @@
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
         "@tanstack/react-query": "^5.64.2",
+        "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
@@ -39,7 +42,9 @@
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
+        "server-only": "^0.0.1",
         "sonner": "^1.7.2",
+        "use-debounce": "^10.0.4",
         "zod": "^3.24.1"
     },
     "devDependencies": {
