--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-popover": "^1.1.4",
         "@radix-ui/react-progress": "^1.1.1",
         "@radix-ui/react-scroll-area": "^1.2.2",
+        "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@supabase/ssr": "^0.5.2",
@@ -42,6 +43,7 @@
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
+        "sanitize-html": "^2.14.0",
         "server-only": "^0.0.1",
         "sonner": "^1.7.2",
         "use-debounce": "^10.0.4",
