--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@supabase/supabase-js": "^2.47.16",
         "@tanstack/react-query": "^5.64.2",
         "axios": "^1.7.9",
+        "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
@@ -40,6 +41,7 @@
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.5",
         "react-hook-form": "^7.54.2",
+        "react-hot-toast": "^2.5.1",
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
@@ -47,7 +49,8 @@
         "server-only": "^0.0.1",
         "sonner": "^1.7.2",
         "use-debounce": "^10.0.4",
-        "zod": "^3.24.1"
+        "zod": "^3.24.1",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
