--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
         "@tanstack/react-query": "^5.64.2",
+        "@tanstack/react-table": "^8.20.6",
         "axios": "^1.7.9",
         "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
         "class-variance-authority": "^0.7.1",
