--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # supabase config
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_JWT_SECRET=
 
 # google auth
 GOOGLE_AUTH_CLIENT_SECRET=
@@ -15,3 +17,4 @@ S3_PUBLIC_FILE_URL_PREFIX=
 
 # website
 NEXT_PUBLIC_SITE_URL=https://127.0.0.1:3000
+USER_SUBMISSION_PER_QUIZ_LIMIT=20
