--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.5.2",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
         "motion": "^12.0.6",
         "next": "15.1.5",
@@ -58,6 +59,7 @@
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4.0.0",
         "@tanstack/eslint-plugin-query": "^5.64.2",
+        "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
