bug fixes + refactoring in the quiz of user part

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ S3_PUBLIC_FILE_URL_PREFIX=
 # website
 NEXT_PUBLIC_SITE_URL=https://127.0.0.1:3000
 USER_SUBMISSION_PER_QUIZ_LIMIT=20
+
+# xp
+NEXT_PUBLIC_WRONG_ANSWER_XP=-1
+NEXT_PUBLIC_CORRECT_ANSWER_XP=2
+NEXT_PUBLIC_SKIPPED_ANSWER_XP=-2
