--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ USER_SUBMISSION_PER_QUIZ_LIMIT=20
 NEXT_PUBLIC_WRONG_ANSWER_XP=-1
 NEXT_PUBLIC_CORRECT_ANSWER_XP=2
 NEXT_PUBLIC_SKIPPED_ANSWER_XP=-2
+
+# ai
+ANTHROPIC_API_KEY=
