--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.5.2",
         "jsonwebtoken": "^9.0.2",
+        "langchain": "^0.3.19",
         "lucide-react": "^0.474.0",
         "motion": "^12.0.6",
         "next": "15.1.5",
