--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ai-sdk/anthropic": "^1.1.9",
         "@aws-sdk/client-s3": "^3.741.0",
         "@aws-sdk/s3-request-presigner": "^3.741.0",
         "@hookform/resolvers": "^3.10.0",
@@ -26,6 +27,7 @@
         "@tanstack/react-query": "^5.64.2",
         "@tanstack/react-table": "^8.20.6",
         "@uidotdev/usehooks": "^2.4.1",
+        "ai": "^4.1.45",
         "axios": "^1.7.9",
         "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
         "class-variance-authority": "^0.7.1",
@@ -33,7 +35,6 @@
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.5.2",
         "jsonwebtoken": "^9.0.2",
-        "langchain": "^0.3.19",
         "lucide-react": "^0.474.0",
         "motion": "^12.0.6",
         "next": "15.1.5",
