--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "nextjs-toploader": "^3.7.15",
         "nodemailer": "^6.9.16",
         "nuqs": "^2.3.2",
+        "partial-json": "^0.1.7",
         "react": "^19.0.0",
         "react-confetti": "^6.2.2",
         "react-dom": "^19.0.0",
