--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -12,6 +12,9 @@
         "@ai-sdk/anthropic": "^1.1.10",
         "@aws-sdk/client-s3": "^3.741.0",
         "@aws-sdk/s3-request-presigner": "^3.741.0",
+        "@babel/parser": "^7.26.9",
+        "@babel/traverse": "^7.26.9",
+        "@excalidraw/excalidraw": "0.17.2",
         "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
@@ -37,8 +40,11 @@
         "embla-carousel-react": "^8.5.2",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
+        "monaco-editor": "^0.52.2",
+        "monaco-jsx-highlighter": "^2.77.77",
+        "monaco-themes": "^0.4.4",
         "motion": "^12.0.6",
-        "next": "15.1.5",
+        "next": "15.2.0",
         "nextjs-toploader": "^3.7.15",
         "nodemailer": "^6.9.16",
         "nuqs": "^2.3.2",
@@ -63,6 +69,7 @@
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4.0.0",
         "@tanstack/eslint-plugin-query": "^5.64.2",
+        "@types/babel__traverse": "^7.20.6",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.17",
