new way for creating images + implemented code snippets

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ S3_REGION=
 S3_ACCESS_ID=
 S3_ACCESS_KEY=
 S3_PUBLIC_FILE_URL_PREFIX=
+NEXT_PUBLIC_FILE_SIZE_LIMIT=10 # in MB
 
 # website
 NEXT_PUBLIC_SITE_URL=https://127.0.0.1:3000
@@ -26,6 +27,8 @@ NEXT_PUBLIC_SKIPPED_ANSWER_XP=-2
 
 # ai
 ANTHROPIC_API_KEY=
+OPENAI_API_KEY=
+OPENAI_ENDPOINT=
 
 #quiz generation
 NEXT_PUBLIC_MAX_QUESTION_PER_QUIZ=40
