--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     },
     "dependencies": {
         "@ai-sdk/anthropic": "^1.1.10",
+        "@ai-sdk/deepseek": "^0.1.12",
+        "@ai-sdk/openai": "^1.1.15",
         "@aws-sdk/client-s3": "^3.741.0",
         "@aws-sdk/s3-request-presigner": "^3.741.0",
         "@babel/parser": "^7.26.9",
         "@babel/traverse": "^7.26.9",
         "@excalidraw/excalidraw": "0.17.2",
         "@hookform/resolvers": "^3.10.0",
+        "@openrouter/ai-sdk-provider": "^0.4.1",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.4",
