--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@babel/traverse": "^7.26.9",
         "@excalidraw/excalidraw": "0.17.2",
         "@hookform/resolvers": "^3.10.0",
+        "@monaco-editor/react": "^4.7.0",
         "@openrouter/ai-sdk-provider": "^0.4.1",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
