--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@aws-sdk/s3-request-presigner": "^3.741.0",
         "@babel/parser": "^7.26.9",
         "@babel/traverse": "^7.26.9",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
         "@excalidraw/excalidraw": "0.17.2",
         "@hookform/resolvers": "^3.10.0",
         "@monaco-editor/react": "^4.7.0",
