--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "@hookform/resolvers": "^3.10.0",
         "@monaco-editor/react": "^4.7.0",
         "@openrouter/ai-sdk-provider": "^0.4.1",
+        "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-collapsible": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.4",
         "@radix-ui/react-popover": "^1.1.4",
         "@radix-ui/react-progress": "^1.1.1",
