--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@tiptap/extension-highlight": "^2.11.5",
         "@tiptap/extension-image": "^2.11.5",
         "@tiptap/extension-link": "^2.11.5",
+        "@tiptap/extension-placeholder": "^2.11.5",
         "@tiptap/extension-text-align": "^2.11.5",
         "@tiptap/extension-typography": "^2.11.5",
         "@tiptap/extension-underline": "^2.11.5",
