--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,4 @@ OPENAI_ENDPOINT=
 NEXT_PUBLIC_MAX_QUESTION_PER_QUIZ=20
 NEXT_PUBLIC_LOW_MODEL_LOW_TOKENS_QUIZ_CREDIT_COST=1
 NEXT_PUBLIC_LOW_MODEL_HIGH_TOKENS_QUIZ_CREDIT_COST=3
+NEXT_PUBLIC_ALLOWED_REFUNDS_PER_MONTH=100
