--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ OPENAI_ENDPOINT=
 
 #quiz generation
 NEXT_PUBLIC_MAX_QUESTION_PER_QUIZ=20
-NEXT_PUBLIC_LOW_CREDIT_COST=1
-NEXT_PUBLIC_HIGH_CREDIT_COST=3
 NEXT_PUBLIC_ALLOWED_REFUNDS_PER_MONTH=100
+NEXT_PUBLIC_LOW_CREDIT_COST=0.2
+NEXT_PUBLIC_MEDIUM_CREDIT_COST=1
+NEXT_PUBLIC_HIGH_CREDIT_COST=3
