--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-popover": "^1.1.4",
         "@radix-ui/react-progress": "^1.1.1",
+        "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-scroll-area": "^1.2.2",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
@@ -79,6 +80,7 @@
         "nodemailer": "^6.9.16",
         "nuqs": "^2.3.2",
         "partial-json": "^0.1.7",
+        "pdfjs-dist": "3.11.174",
         "react": "^19.0.0",
         "react-confetti": "^6.2.2",
         "react-dom": "^19.0.0",
