--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@tiptap/extension-underline": "^2.11.5",
         "@tiptap/react": "^2.11.5",
         "@tiptap/starter-kit": "^2.11.5",
+        "@types/sanitize-html": "^2.13.0",
         "ai": "^4.1.46",
         "axios": "^1.7.9",
         "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
@@ -69,6 +70,7 @@
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.5.2",
         "highlight.js": "^11.11.1",
+        "html-react-parser": "^5.2.2",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
         "monaco-editor": "^0.52.2",
@@ -87,13 +89,12 @@
         "react-dropzone": "^14.3.5",
         "react-hook-form": "^7.54.2",
         "react-hot-toast": "^2.5.1",
-        "react-medium-image-zoom": "^5.2.14",
+        "react-markdown": "^10.1.0",
         "react-phone-number-input": "^3.4.11",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
-        "sanitize-html": "^2.14.0",
+        "sanitize-html": "^2.15.0",
         "server-only": "^0.0.1",
-        "sonner": "^1.7.2",
         "tiptap-extension-resize-image": "^1.2.1",
         "use-debounce": "^10.0.4",
         "zod": "^3.24.1",
