--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@tiptap/extension-underline": "^2.11.5",
         "@tiptap/react": "^2.11.5",
         "@tiptap/starter-kit": "^2.11.5",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@types/sanitize-html": "^2.13.0",
         "ai": "^4.1.46",
         "axios": "^1.7.9",
@@ -77,10 +78,11 @@
         "monaco-jsx-highlighter": "^2.77.77",
         "monaco-themes": "^0.4.4",
         "motion": "^12.0.6",
-        "next": "15.2.2",
+        "next": "15.2.3",
         "nextjs-toploader": "^3.7.15",
         "nodemailer": "^6.9.16",
         "nuqs": "^2.3.2",
+        "parse-numeric-range": "^1.3.0",
         "partial-json": "^0.1.7",
         "pdfjs-dist": "3.11.174",
         "react": "^19.0.0",
@@ -91,6 +93,7 @@
         "react-hot-toast": "^2.5.1",
         "react-markdown": "^10.1.0",
         "react-phone-number-input": "^3.4.11",
+        "react-syntax-highlighter": "^15.6.1",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
         "sanitize-html": "^2.15.0",
