add the abilty to summarize multiple pages

--- a/package.json
+++ b/package.json
@@ -94,8 +94,10 @@
         "react-markdown": "^10.1.0",
         "react-phone-number-input": "^3.4.11",
         "react-syntax-highlighter": "^15.6.1",
+        "react-to-print": "^3.0.5",
         "react-virtuoso": "^4.12.3",
         "recharts": "^2.15.0",
+        "remark-gfm": "^4.0.1",
         "sanitize-html": "^2.15.0",
         "server-only": "^0.0.1",
         "tiptap-extension-resize-image": "^1.2.1",
