--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@tiptap/starter-kit": "^2.11.5",
         "@types/react-syntax-highlighter": "^15.5.13",
         "@types/sanitize-html": "^2.13.0",
+        "@xyflow/react": "^12.4.4",
         "ai": "^4.1.46",
         "axios": "^1.7.9",
         "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
