--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "embla-carousel-react": "^8.5.2",
         "highlight.js": "^11.11.1",
         "html-react-parser": "^5.2.2",
+        "html-to-image": "1.11.11",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
         "monaco-editor": "^0.52.2",
