--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
+        "dexie": "^4.0.11",
         "embla-carousel-react": "^8.5.2",
         "highlight.js": "^11.11.1",
         "html-react-parser": "^5.2.2",
