create mindmaps from youtube links

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ NEXT_PUBLIC_ALLOWED_REFUNDS_PER_MONTH=100
 NEXT_PUBLIC_LOW_CREDIT_COST=0.2
 NEXT_PUBLIC_MEDIUM_CREDIT_COST=1
 NEXT_PUBLIC_HIGH_CREDIT_COST=3
+
+
+
+#youtube transcriptions service
+YOUTUBE_TRANSCRIPTIONS_SERVICE=https://example.com
+YOUTUBE_TRANSCRIPTIONS_SERVICE_SECRET=CHANGE_ME
