--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
         "monaco-jsx-highlighter": "^2.77.77",
         "monaco-themes": "^0.4.4",
         "motion": "^12.0.6",
-        "next": "15.2.4",
+        "next": "^15.3.0-canary.38",
         "nextjs-toploader": "^3.7.15",
         "nodemailer": "^6.9.16",
         "nuqs": "^2.3.2",
