--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
         "monaco-jsx-highlighter": "^2.77.77",
         "monaco-themes": "^0.4.4",
         "motion": "^12.0.6",
-        "next": "^15.3.0-canary.38",
+        "next": "^15.3.0-canary.46",
+        "next-rspack": "^15.3.0",
         "nextjs-toploader": "^3.7.15",
         "nuqs": "^2.3.2",
         "parse-numeric-range": "^1.3.0",
