--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-collapsible": "^1.1.3",
-        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dialog": "^1.1.7",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.2",
@@ -105,6 +105,7 @@
         "sanitize-html": "^2.15.0",
         "server-only": "^0.0.1",
         "tiptap-extension-resize-image": "^1.2.1",
+        "vaul": "^1.1.2",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
     },
