--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbo",
+        "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -80,7 +80,7 @@
         "monaco-jsx-highlighter": "^2.77.77",
         "monaco-themes": "^0.4.4",
         "motion": "^12.0.6",
-        "next": "^15.3.0-canary.46",
+        "next": "^15.3.1-canary.7",
         "next-rspack": "^15.3.0",
         "nextjs-toploader": "^3.7.15",
         "nuqs": "^2.3.2",
