multi language support in the landing page

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "embla-carousel-react": "^8.5.2",
         "highlight.js": "^11.11.1",
         "html-to-image": "1.11.11",
+        "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
         "monaco-editor": "^0.52.2",
@@ -114,6 +115,7 @@
         "@tailwindcss/postcss": "^4.0.0",
         "@tanstack/eslint-plugin-query": "^5.64.2",
         "@types/babel__traverse": "^7.20.6",
+        "@types/js-cookie": "^3.0.6",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^20",
         "@types/react": "^19",
