--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "motion": "^12.0.6",
         "next": "^15.4.0-canary.11",
         "next-rspack": "^15.3.0",
+        "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.7.15",
         "nuqs": "^2.3.2",
         "parse-numeric-range": "^1.3.0",
