--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "@xyflow/react": "^12.4.4",
         "ai": "^4.1.46",
         "axios": "^1.7.9",
-        "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+        "babel-plugin-react-compiler": "^19.1.0-rc.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
