--- a/package.json
+++ b/package.json
@@ -1,139 +1,139 @@
 {
-  "name": "rivez.tn",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ai-sdk/anthropic": "^1.1.10",
-    "@ai-sdk/deepseek": "^0.1.12",
-    "@ai-sdk/openai": "^1.1.15",
-    "@aws-sdk/client-s3": "^3.741.0",
-    "@aws-sdk/s3-request-presigner": "^3.741.0",
-    "@babel/parser": "^7.26.9",
-    "@babel/traverse": "^7.26.9",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@excalidraw/excalidraw": "0.17.2",
-    "@hookform/resolvers": "^3.10.0",
-    "@monaco-editor/react": "^4.7.0",
-    "@openrouter/ai-sdk-provider": "^0.4.1",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-toggle-group": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.7",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.16",
-    "@tanstack/react-query": "^5.64.2",
-    "@tanstack/react-table": "^8.20.6",
-    "@tiptap/extension-code-block-lowlight": "^2.11.5",
-    "@tiptap/extension-color": "^2.11.5",
-    "@tiptap/extension-highlight": "^2.11.5",
-    "@tiptap/extension-image": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/extension-table": "^2.11.5",
-    "@tiptap/extension-table-cell": "^2.11.5",
-    "@tiptap/extension-table-header": "^2.11.5",
-    "@tiptap/extension-table-row": "^2.11.5",
-    "@tiptap/extension-text-align": "^2.11.5",
-    "@tiptap/extension-typography": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/sanitize-html": "^2.13.0",
-    "@xyflow/react": "^12.4.4",
-    "ai": "^4.1.46",
-    "axios": "^1.7.9",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "dexie": "^4.0.11",
-    "embla-carousel-react": "^8.5.2",
-    "highlight.js": "^11.11.1",
-    "html-to-image": "1.11.11",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.474.0",
-    "monaco-editor": "^0.52.2",
-    "monaco-jsx-highlighter": "^2.77.77",
-    "monaco-themes": "^0.4.4",
-    "motion": "^12.0.6",
-    "next": "15.6.0-canary.58",
-    "next-rspack": "^15.3.0",
-    "next-themes": "^0.4.6",
-    "nextjs-toploader": "^3.7.15",
-    "nuqs": "^2.3.2",
-    "parse-numeric-range": "^1.3.0",
-    "partial-json": "^0.1.7",
-    "pdfjs-dist": "3.11.174",
-    "react": "^19.0.0",
-    "react-confetti": "^6.2.2",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.5",
-    "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.1",
-    "react-markdown": "^10.1.0",
-    "react-phone-number-input": "^3.4.11",
-    "react-syntax-highlighter": "^15.6.1",
-    "react-to-print": "^3.0.5",
-    "react-virtuoso": "^4.12.3",
-    "recharts": "^2.15.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "sanitize-html": "^2.15.0",
-    "server-only": "^0.0.1",
-    "tiptap-extension-resize-image": "^1.2.1",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@tanstack/eslint-plugin-query": "^5.64.2",
-    "@types/babel__traverse": "^7.20.6",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "supabase": "^2.6.8",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": false
-  }
+    "name": "rivez.tn",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@ai-sdk/anthropic": "^1.1.10",
+        "@ai-sdk/deepseek": "^0.1.12",
+        "@ai-sdk/openai": "^1.1.15",
+        "@aws-sdk/client-s3": "^3.741.0",
+        "@aws-sdk/s3-request-presigner": "^3.741.0",
+        "@babel/parser": "^7.26.9",
+        "@babel/traverse": "^7.26.9",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
+        "@excalidraw/excalidraw": "0.17.2",
+        "@hookform/resolvers": "^3.10.0",
+        "@monaco-editor/react": "^4.7.0",
+        "@openrouter/ai-sdk-provider": "^0.4.1",
+        "@radix-ui/react-accordion": "^1.2.3",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-collapsible": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.1.7",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.4",
+        "@radix-ui/react-progress": "^1.1.1",
+        "@radix-ui/react-radio-group": "^1.2.3",
+        "@radix-ui/react-scroll-area": "^1.2.2",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-toggle": "^1.1.2",
+        "@radix-ui/react-toggle-group": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.7",
+        "@supabase/ssr": "^0.5.2",
+        "@supabase/supabase-js": "^2.47.16",
+        "@tanstack/react-query": "^5.64.2",
+        "@tanstack/react-table": "^8.20.6",
+        "@tiptap/extension-code-block-lowlight": "^2.11.5",
+        "@tiptap/extension-color": "^2.11.5",
+        "@tiptap/extension-highlight": "^2.11.5",
+        "@tiptap/extension-image": "^2.11.5",
+        "@tiptap/extension-link": "^2.11.5",
+        "@tiptap/extension-placeholder": "^2.11.5",
+        "@tiptap/extension-table": "^2.11.5",
+        "@tiptap/extension-table-cell": "^2.11.5",
+        "@tiptap/extension-table-header": "^2.11.5",
+        "@tiptap/extension-table-row": "^2.11.5",
+        "@tiptap/extension-text-align": "^2.11.5",
+        "@tiptap/extension-typography": "^2.11.5",
+        "@tiptap/extension-underline": "^2.11.5",
+        "@tiptap/react": "^2.11.5",
+        "@tiptap/starter-kit": "^2.11.5",
+        "@types/react-syntax-highlighter": "^15.5.13",
+        "@types/sanitize-html": "^2.13.0",
+        "@xyflow/react": "^12.4.4",
+        "ai": "^4.1.46",
+        "axios": "^1.7.9",
+        "babel-plugin-react-compiler": "^19.1.0-rc.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "1.0.0",
+        "dexie": "^4.0.11",
+        "embla-carousel-react": "^8.5.2",
+        "highlight.js": "^11.11.1",
+        "html-to-image": "1.11.11",
+        "js-cookie": "^3.0.5",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.474.0",
+        "monaco-editor": "^0.52.2",
+        "monaco-jsx-highlighter": "^2.77.77",
+        "monaco-themes": "^0.4.4",
+        "motion": "^12.0.6",
+        "next": "^15.4.8",
+        "next-rspack": "^15.3.0",
+        "next-themes": "^0.4.6",
+        "nextjs-toploader": "^3.7.15",
+        "nuqs": "^2.3.2",
+        "parse-numeric-range": "^1.3.0",
+        "partial-json": "^0.1.7",
+        "pdfjs-dist": "3.11.174",
+        "react": "^19.0.1",
+        "react-confetti": "^6.2.2",
+        "react-dom": "^19.0.1",
+        "react-dropzone": "^14.3.5",
+        "react-hook-form": "^7.54.2",
+        "react-hot-toast": "^2.5.1",
+        "react-markdown": "^10.1.0",
+        "react-phone-number-input": "^3.4.11",
+        "react-syntax-highlighter": "^15.6.1",
+        "react-to-print": "^3.0.5",
+        "react-virtuoso": "^4.12.3",
+        "recharts": "^2.15.0",
+        "rehype-raw": "^7.0.0",
+        "rehype-sanitize": "^6.0.0",
+        "remark-gfm": "^4.0.1",
+        "sanitize-html": "^2.15.0",
+        "server-only": "^0.0.1",
+        "tiptap-extension-resize-image": "^1.2.1",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.1",
+        "zustand": "^5.0.3"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.0.0",
+        "@tanstack/eslint-plugin-query": "^5.64.2",
+        "@types/babel__traverse": "^7.20.6",
+        "@types/js-cookie": "^3.0.6",
+        "@types/jsonwebtoken": "^9.0.8",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.5",
+        "postcss": "^8",
+        "supabase": "^2.6.8",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss": "^4.0.0",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "^5"
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": false
+    }
 }
